# Osu-Projection-Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt
app/assets/shaders/: shader.frag
app/include/: Calibration.hpp  FrameData.hpp  RenderTexture.hpp  Shader.hpp  Texture.hpp  WebcamCapture.hpp  Window.hpp  WindowCapture.hpp
app/src/: Calibration.cpp  RenderTexture.cpp  Shader.cpp  Texture.cpp  WebcamCapture.cpp  Window.cpp  WindowCapture.cpp  main.cpp
python/: calibration.py  recaster.py
